--- a/package.json
+++ b/package.json
@@ -40,14 +40,16 @@
     }
   },
   "devDependencies": {
+    "aurelia-tools": "^0.1.11",
     "babel-dts-generator": "^0.2.5",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
     "gulp-babel": "^5.1.0",
     "gulp-bump": "^0.3.1",
+    "gulp-changed": "^1.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-insert": "^0.4.0",
+    "gulp-insert": "^0.5.0",
     "gulp-jshint": "^1.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-yuidoc": "^0.1.2",
@@ -56,7 +58,6 @@
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
     "vinyl-paths": "^1.0.0",
-    "yargs": "^2.1.1",
-    "gulp-changed": "^1.1.0"
+    "yargs": "^2.1.1"
   }
 }
